# My-messenger

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  client.cpp  common.hpp  main.cpp
build_noccache/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  messenger_client  messenger_server
build_noccache/.qt/: QtDeploySupport.cmake
build_noccache/messenger_client_autogen/: deps  moc_predefs.h
build_noccache/messenger_core_autogen/: deps  mocs_compilation.cpp
build_noccache/messenger_core_autogen/JCP2AIONHY/: moc_chat_window.cpp  moc_chat_window.cpp.d  moc_login_window.cpp  moc_login_window.cpp.d  moc_simple_window.cpp  moc_simple_window.cpp.d
build_noccache/messenger_core_autogen/SFACWAZ6MW/: moc_message_bridge.cpp  moc_message_bridge.cpp.d
build_noccache/messenger_server_autogen/: deps
build_tests/: DartConfiguration.tcl
include/: bytes_hash.hpp
include/app/: config.hpp  runtime.hpp
include/application/commands/: command_catalog.hpp  command_factory.hpp  command_interface.hpp  command_pattern.hpp  command_pattern_matcher.hpp
include/application/commands/impl/: connect.hpp  disconnect.hpp  exit.hpp  get_pubkey.hpp  help_command.hpp  join.hpp  login.hpp  make_room.hpp  private_message.hpp  send_group_message.hpp  sendfile.hpp
include/application/dispatching/: message_dispatcher.hpp  message_handler_interfaces.hpp
include/application/dispatching/message_dispatchers/: cipher_handler.hpp  command_handler.hpp  file_handlers.hpp  peer_cipher_handler.hpp  peer_file_handlers.hpp  peer_response_handler.hpp  peer_text_handler.hpp  response_handler.hpp  server_cipher_handler.hpp  server_file_handlers.hpp  server_text_handler.hpp  text_dispatcher.hpp
include/application/messaging/: message_bridge.hpp  message_queue.hpp  messaging_client.hpp  messaging_peer.hpp  messaging_server.hpp  messaging_service.hpp
include/application/services/: chat_service.hpp  encryption_service.hpp  peer_application_service.hpp  server_application_service.hpp  services_common.hpp  session_manager.hpp  user_service.hpp
include/application/session/: client_context.hpp
include/encryption/: AESGCMEncryption.hpp  KDF.hpp  entropy.hpp  identity_key.hpp
include/infrastructure/crypto/: AESGCMEncryption.hpp
include/infrastructure/logging/: logger.hpp
include/models/: chat.hpp  message.hpp  user.hpp
include/network/protocol/: framing.hpp  parser.hpp
include/network/transport/: acceptor.hpp  builders.hpp  client.hpp  connection.hpp  event_loop.hpp  handling.hpp  interface.hpp  peer.hpp  raw_socket.hpp  server.hpp  tls.hpp  transport.hpp
include/protocol/: framing.hpp  parser.hpp
include/services/: client_context.hpp  command_interface.hpp  encryption_service.hpp  message_bridge.hpp  message_dispatcher.hpp  message_handler_interfaces.hpp  message_queue.hpp  messageing_service.hpp  messaging_client.hpp  messaging_peer.hpp  messaging_server.hpp  messaging_service.hpp  session_manager.hpp  text_dispatcher.hpp
include/services/commands_impl/: connect.hpp  disconnect.hpp  exit.hpp  get_pubkey.hpp  help_command.hpp  join.hpp  login.hpp  make_room.hpp  private_message.hpp  send_group_message.hpp  sendfile.hpp
include/services/message_dispatchers/: cipher_handler.hpp  command_handler.hpp  file_handlers.hpp  peer_cipher_handler.hpp  peer_file_handlers.hpp  peer_response_handler.hpp  peer_text_handler.hpp  response_handler.hpp  server_cipher_handler.hpp  server_file_handlers.hpp  server_text_handler.hpp  text_dispatcher.hpp
include/transport/: acceptor.hpp  builders.hpp  client.hpp  connection.hpp  handling.hpp  interface.hpp  peer.hpp  raw_socket.hpp  server.hpp  tls.hpp
include/ui/: chat_window.hpp  login_window.hpp  simple_window.hpp
include/utils/: base64.hpp  logger.hpp
src/app/: runtime.cpp
src/application/: encryption_service.cpp  messaging_service.cpp
src/application/commands/: command_catalog.cpp  command_factory.cpp  command_interface.cpp  command_pattern_matcher.cpp
src/application/commands/impl/: connect.cpp  disconnect.cpp  exit.cpp  get_pubkey.cpp  join.cpp  login.cpp  make_room.cpp  private_message.cpp  send_group_message.cpp  sendfile.cpp
src/application/dispatching/: message_dispatcher.cpp
src/application/dispatching/message_dispatchers/: cipher_handler.cpp  command_handler.cpp  file_handlers.cpp  (+9 more)
src/application/messaging/: message_queue.cpp  messaging_client.cpp  messaging_peer.cpp  messaging_server.cpp
src/application/runtime/: runtime.cpp
src/application/services/: chat_service.cpp  peer_application_service.cpp  server_application_service.cpp  session_manager.cpp  user_service.cpp
src/encryption/: AESGCMEncryption.cpp  identity_key.cpp
src/infrastructure/crypto/: AESGCMEncryption.cpp  identity_key.cpp
src/infrastructure/logging/: logger.cpp
src/models/: chat.cpp  message.cpp  user.cpp
src/network/protocol/: framing.cpp  parser.cpp
src/network/transport/: acceptor.cpp  client.cpp  connection.cpp  event_loop.cpp  handling.cpp  peer.cpp  raw_socket.cpp  server.cpp  tls.cpp  transport.cpp
src/protocol/: framing.cpp  parser.cpp
src/services/: command_interface.cpp  encryption_service.cpp  message_dispatcher.cpp  message_queue.cpp  messaging_client.cpp  messaging_peer.cpp  messaging_server.cpp  messaging_service.cpp
src/services/commands_impl/: connect.cpp  disconnect.cpp  exit.cpp  get_pubkey.cpp  join.cpp  login.cpp  make_room.cpp  private_message.cpp  send_group_message.cpp  sendfile.cpp
src/services/message_dispatchers/: cipher_handler.cpp  command_handler.cpp  file_handlers.cpp  peer_cipher_handler.cpp  peer_file_handlers.cpp  peer_response_handler.cpp  peer_text_handler.cpp  response_handler.cpp  server_cipher_handler.cpp  server_file_handlers.cpp  server_text_handler.cpp  text_dispatcher.cpp
src/transport/: acceptor.cpp  client.cpp  connection.cpp  event_loop.cpp  handling.cpp  peer.cpp  raw_socket.cpp  server.cpp  tls.cpp  transport.cpp
src/ui/: chat_window.cpp  login_window.cpp  simple_window.cpp
src/utils/: logger.cpp
tests/: peer_node_tests.cpp  tests.cpp
